# PicoBoot

./: README.md
boot/ARMCM0_STM32F072RB_Nucleo/: CMakeLists.txt
boot/ARMCM0_STM32F072RB_Nucleo/Core/Inc/: boot_config.h  main.h  stm32f0xx_hal_conf.h
boot/ARMCM0_STM32F072RB_Nucleo/Core/Src/: boot_flash.c  boot_ll_util.c  boot_timer.c  boot_uart.c  main.c  stm32f0xx_hal_msp.c
boot/ARMCM4_STM32L476RG_Nucleo/: CMakeLists.txt  STM32L476RGTx_FLASH.ld  bootbin.h  builder.py
boot/ARMCM4_STM32L476RG_Nucleo/Core/Inc/: boot_config.h
boot/ARMCM4_STM32L476RG_Nucleo/Core/Src/: boot_flash.c  boot_ll_util.c  boot_uart.c  main.c
boot/PC_Emulator/: CMakeLists.txt
boot/PC_Emulator/PC_Emulator/: CMakeLists.txt
boot/PC_Emulator/src/: boot_uart.cpp  main.cpp
bootutil/: CMakeLists.txt
bootutil/inc/: boot.h  boot_types.h  can.h  com.h  crc32.h  flash.h  flash_util.h  host.h  ll_util.h  timer.h  uart.h
bootutil/src/: boot.c  boot_flash.c  com.c  crc32.c  flash.c  flash_util.c  host.c
bootutil/templates/: boot_config_template.h
common/: arm-cm4.cmake
common/CMSIS/Device/ST/STM32L4xx/Include/: stm32l4xx.h
docs/: bootloader_operation.md  communication_protocol.md  desktop_commands.md
host/: CMakeLists.txt  main.cpp
host/CANTranslator/ARMCM4_STM32L496RG_Testboard/: .mxproject  ARMCM4_STM32L496RG_Testboard.ioc  CMakeLists.txt  Makefile
host/CANTranslator/ARMCM4_STM32L496RG_Testboard/Core/Inc/: boot_config.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  user.h
host/CANTranslator/ARMCM4_STM32L496RG_Testboard/Core/Src/: boot_can.c  boot_flash.c  boot_uart.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  user.c
host/CANTranslator/ARMCM4_STM32L496RG_Testboard/USB_DEVICE/App/: usbd_cdc_if.c
host/DesktopApp/: CMakeLists.txt  IoThread.cpp  IoThread.h  boot_config.h  boot_uart.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
host/QtSerialApp/QtSerialApp/: BootTarget.cpp  BootTarget.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  SerialPort.cpp
host/windows-host/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  Crc32Test.cpp  FlashUtilTest.cpp  README.md  Sha256Test.cpp
tests/HIL/Flash_Test/ARMCM4_STM32L476RG_Nucleo/: .mxproject
tests/HIL/Flash_Test/ARMCM4_STM32L476RG_Nucleo/Core/Inc/: boot_config.h  test.h
tests/HIL/Flash_Test/ARMCM4_STM32L476RG_Nucleo/Core/Src/: boot_flash.c  boot_uart.c
tests/HIL/Flash_Test/HostApp/: boot_config.h  boot_uart.cpp  main.cpp
tests/HIL/Packet_Test/ARMCM4_STM32L476RG_Nucleo/: ARMCM4_STM32L476RG_Nucleo.ioc  CMakeLists.txt
tests/HIL/Packet_Test/ARMCM4_STM32L476RG_Nucleo/Core/Inc/: main.h  test.h
tests/HIL/Packet_Test/ARMCM4_STM32L476RG_Nucleo/Core/Src/: boot_uart.c  main.c
tests/HIL/Packet_Test/HostApp/: boot_uart.cpp  main.cpp
tests/HIL/StateMachine_Test/ARMCM4_STM32L476RG_Nucleo/: CMakeLists.txt
tests/HIL/StateMachine_Test/ARMCM4_STM32L476RG_Nucleo/Core/Inc/: boot_config.h  test.h
tests/HIL/StateMachine_Test/ARMCM4_STM32L476RG_Nucleo/Core/Src/: boot_flash.c  boot_ll_util.c  boot_uart.c
tests/HIL/StateMachine_Test/HostApp/: boot_config.h  boot_uart.cpp  main.cpp
tests/HIL/UART_Test/ARMCM4_STM32L476RG_Nucleo/: Makefile
tests/HIL/UART_Test/ARMCM4_STM32L476RG_Nucleo/Core/Inc/: test.h
tests/HIL/UART_Test/ARMCM4_STM32L476RG_Nucleo/Core/Src/: boot_uart.c
tests/HIL/UART_Test/HostApp/: CMakeLists.txt  boot_uart.cpp  main.cpp
tests/stubs/: boot_config.h  stm32f0xx.h
